syntax = "proto3"; // 协议版本
option java_package = "com.swcourse.grpc.protobuf";
option java_outer_classname = "SkyWalkingServiceApi";

// 服务接口
service SkyWalkingService {
  rpc helloSkyWalking (SkyWalkingRequest) returns (SkyWalkingResponse) {}
}

// 定义请求体
message SkyWalkingRequest {
  string word = 1;
}

// 定义响应内容
message SkyWalkingResponse {
  string word = 2;
}